src/objects/subscriberValidationRuleInfov2__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X100__c</fullName>
        <label>100</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X200__c</fullName>
        <label>200</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X300__c</fullName>
        <label>300</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ruleGroup__c</fullName>
        <label>ruleGroup</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ruleName__c</fullName>
        <label>ruleName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>subscriberValidationRuleInfov2</label>
</CustomObject>